--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,6 +3,7 @@ on:
   push:
     paths:
       - '**.odd'
+      - 'docs.yml'
 jobs:
   buildDocs:
     runs-on: ubuntu-latest
@@ -19,5 +20,6 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
-          branch: gh-pages # The branch the action should deploy to.
+          branch: gh-pages
           folder: public
+          single-commit: true
