Adding more paths to trigger docs rebuild

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -4,6 +4,7 @@ on:
     paths:
       - '**.odd'
       - 'docs.yml'
+      - 'code/documentation/**/**'	
 jobs:
   buildDocs:
     runs-on: ubuntu-latest
