--- a/build.xml
+++ b/build.xml
@@ -1,41 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project basedir="." default="validate" name="buildLIM">
+<project basedir="." default="all" name="buildLIM">
     
     <property name="lib.dir" value="${basedir}/lib"/>
-    <property name="rng" value="${basedir}/schema/lim.rng"/>
-    
-    <fileset id="dataXml" dir="${basedir}/data">
-        <include name="**/**.xml"/>
-    </fileset>
-    
-    <resourcecount property="dataXmlCount" refid="dataXml"/>
-    
-    <target name="validate" depends="rng, schematron">
-        <echo>Validated ${dataXmlCount} XML files</echo>
-    </target>
-    
-    <target name="rng">
-        <apply executable="java" parallel="true" failonerror="true">
-            <arg line="-jar ${lib.dir}/jing.jar"/>
-            <arg value="${rng}"/>
-            <fileset refid="dataXml"/>
-        </apply>
-    </target>
-    
-    <target name="schematron">
-        <java jar="${lib.dir}/saxon-he-10.jar" fork="true" failonerror="true">
-            <arg line="-xsl:xsl-schematron/xsl/validate.xsl"/>
-            <arg line="-s:xsl-schematron/xsl/validate.xsl"/>
-            <arg line="dir=${basedir}/data"/>
-            <arg line="rng=${basedir}/schema/lim.rng"/>
-            <arg line="-TP:profile.html"/>
-        </java>
-    </target>
     
     <target name="documentation">
         <ant antfile="code/documentation/build.xml" inheritall="false"/>
     </target>
+        
+        
+   <target name="framework">
+       <ant antfile="framework/buildFramework.xml" inheritall="true"/>
+   </target>
     
+    
+  <target name="all" depends="documentation, framework"/>  
     
     
 </project>
