--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,10 +1,5 @@
 name: Build LIM Docs
-on:
-  push:
-    paths:
-      - '**.odd'
-      - 'docs.yml'
-      - 'code/documentation/**/**'	
+on: push
 jobs:
   buildDocs:
     runs-on: ubuntu-latest
@@ -17,10 +12,11 @@ jobs:
         with:
           java-version: 1.8
       - name: Build everything
-        run: ant -f code/documentation/build.xml
-      - name: Deploy 🚀
+        run: ant -f ${{ github.workspace }}/build.xml documentation
+      - name: Deploy documentation🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
           branch: gh-pages
           folder: public
           single-commit: true
+                             
