--- a/.github/workflows/framework.yml
+++ b/.github/workflows/framework.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           java-version: 1.8
       - name: Build Framework
-        run: ant -f {{ github.workspace }}/build.xml framework
+        run: ant -f ${{ github.workspace }}/build.xml framework
       - name: Get version
         run: echo "VERSION=`cat ${{ github.workspace }}/VERSION`" >> $GITHUB_ENV
       - name: Release framework
