--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib"]
-	path = lib
-	url = https://github.com/joeytakeda/lib
+[submodule "xml-validate-action"]
+	path = xml-validate-action
+	url = https://github.com/joeytakeda/xml-validate-action
