--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -11,6 +11,11 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: Install pandoc
+        uses: r-lib/actions/setup-pandoc@v1
+        with:
+          pandoc-version: '2.14.0.3'
+      - run: pandoc -v       
       - name: Build everything
         run: ant -f ${{ github.workspace }}/build.xml documentation
       - name: Deploy documentation
