Adding TEIStylesheets as submodule to this repository and splitting documents into individual modules for easier maintenance of the schema

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "xml-validate-action"]
 	path = xml-validate-action
 	url = https://github.com/joeytakeda/xml-validate-action
+[submodule "Stylesheets"]
+	path = Stylesheets
+	url = https://github.com/TEIC/Stylesheets
+	branch = main
