--- a/build.xml
+++ b/build.xml
@@ -105,7 +105,7 @@
         <delete dir="test_data"/>
         <mkdir dir="test_data"/>
         <copy todir="test_data">
-            <fileset dir="${dataDir}/data">
+            <fileset dir="${dataDir}">
                 <include name="**/**.xml"/>
             </fileset>
             <filterchain>
